@@ -586,6 +586,7 @@ Major new features in this release
 All:
 
 - Fix problem with wx-config installation and use under NetBSD (wiz).
+- Avoid spurious errors on thread creation under NetBSD.
 
 All (GUI):
 
